// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Notification Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
    <ForwardRef(Styled(CrossIcon))
      onClick={[MockFunction]}
    />
  </ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(Styled(Button))
      label="jest-auto-snapshots String Fixture"
      onClick={[MockFunction]}
      type="text"
    />
    <ForwardRef(Styled(Button))
      label="jest-auto-snapshots String Fixture"
      onClick={[MockFunction]}
      type="text"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Notification Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
    <ForwardRef(Styled(CrossIcon))
      onClick={[MockFunction]}
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;
